--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,17 +44,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha06"
-    implementation "androidx.datastore:datastore-preferences-rxjava2:1.0.0-alpha06"
-
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
 
-    implementation  "androidx.datastore:datastore-core:1.0.0-alpha08"
+    implementation  "androidx.datastore:datastore-core:1.0.0-beta01"
     implementation  "com.google.protobuf:protobuf-javalite:3.10.0"
 
-    implementation  "androidx.datastore:datastore:1.0.0-alpha08"
+    implementation  "androidx.datastore:datastore:1.0.0-beta01"
 }
 
 protobuf {
